--- a/day1/iOSSample/iOSSample/Info.plist
+++ b/day1/iOSSample/iOSSample/Info.plist
@@ -32,10 +32,11 @@
         </dict>
     </dict>
     <key>MinimumOSVersion</key>
-        <string>13.0</string>
+        <string>12.4</string>
     <key>UIDeviceFamily</key>
     <array>
         <integer>1</integer>
+        <integer>2</integer>
     </array>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
